crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__build_section_deserialization.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: manifest.build.clone().unwrap()
---
dependencies:
  - python-build-backend >12
build-backend: python-build-backend
channels: []
