crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__build_variants-2.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: resolved_win
---
[
    Some(
        {
            "python": [
                "1.0.*",
            ],
        },
    ),
    Some(
        {
            "python": [
                "3.10.*",
                "3.11.*",
            ],
        },
    ),
]
