crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__build_variants.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: resolved_linux
---
[
    Some(
        {
            "python": [
                "3.10.*",
                "3.11.*",
            ],
        },
    ),
]
