crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__invalid_key@environment.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "expect_parse_failure(&format!(\"{PROJECT_BOILERPLATE}\\n[environments.INVALID]\"))"
---
  × Failed to parse environment name 'INVALID', please use only lowercase letters, numbers and dashes
   ╭─[pixi.toml:8:15]
 7 │         
 8 │ [environments.INVALID]
   ·               ───────
   ╰────
