crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__invalid_key@hostdependencies.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "expect_parse_failure(&format!(\"{PROJECT_BOILERPLATE}\\n[target.win-64.hostdependencies]\"))"
snapshot_kind: text
---
  × Unexpected keys, expected only 'dependencies', 'host-dependencies', 'build-dependencies', 'constraints', 'pypi-dependencies', 'dev', 'activation', 'pypi-options', 'tasks'
   ╭─[pixi.toml:8:16]
 7 │
 8 │ [target.win-64.hostdependencies]
   ·                ────────┬───────
   ·                        ╰── 'hostdependencies' was not expected here
   ╰────
  help: Did you mean 'host-dependencies'?
