crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__invalid_target_specific.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "expect_parse_warnings(&format!(\"{PROJECT_BOILERPLATE}\\n{}\", examples[0]))"
---
  ⚠ The `project` field is deprecated. Use `workspace` instead.
   ╭─[pixi.toml:2:1]
 1 │
 2 │ ╭─▶ [project]
 3 │ │   name = "foo"
 4 │ │   version = "0.1.0"
 5 │ │   channels = []
 6 │ ├─▶ platforms = ['win-64', 'osx-64', 'linux-64']
   · ╰──── replace this with 'workspace'
 7 │
   ╰────

  ⚠ The target selector 'foobar' does not match any of the platforms supported by the workspace
   ╭─[pixi.toml:8:9]
 5 │ channels = []
 6 │ platforms = ['win-64', 'osx-64', 'linux-64']
   ·             ────────────────┬───────────────
   ·                             ╰── the platforms supported by the workspace are defined here
 7 │
 8 │ [target.foobar.dependencies]
   ·         ───┬──
   ·            ╰── target selector specified here
 9 │             invalid_platform = "henk"
   ╰────
  help: Add 'foobar' to the supported platforms, using `pixi workspace platform add foobar`
